--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -12,31 +12,23 @@ template:
     - build
     - repo
   info:
-    git url: >
-      "[" + $env.repository + "]" +
-        "(" + $env.repository + ")"
-    git branch: >
-      "[" + $env.branch + "]" +
-        "(" + $env.repository +
-          "/tree/" + $env.branch + ")"
+    git url: >-
+      [https://github.com/open-toolchain/secure-kube-toolchain](https://github.com/open-toolchain/secure-kube-toolchain)
+    git branch: >-
+      [master](https://github.com/open-toolchain/secure-kube-toolchain/tree/master)
 toolchain:
-  name: 'kube-toolchain-{{timestamp}}'
+  name: 'mytodo-toolchain-{{timestamp}}'
   template:
     getting_started:
-      $ref: "#/messages/template.gettingStarted"
+      $ref: "#/messages/template.gettingStarted" 
 services:
   repo:
     service_id: >
       $env.source_provider ? $env.source_provider : 'hostedgit'
     parameters:
-      repo_name: 'hello-containers-{{timestamp}}'
-      repo_url: >
-        $env.type === 'link' ? 
-          $env.app_repo : 'https://github.com/open-toolchain/hello-containers'
-      source_repo_url: >
-        $env.type === 'fork' || $env.type === 'clone' ? 
-          $env.app_repo : 'https://github.com/open-toolchain/hello-containers'
-      type: $env.type || 'clone'
+      repo_name: 'mytodo-{{timestamp}}'
+      repo_url: 'https://github.com/lionelmace/mytodo'
+      type: clone
       has_issues: true
       enable_traceability: true
   build:
