--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -16,7 +16,7 @@ stages:
       region_id: ${REGISTRY_REGION_ID}
       api_key: ${API_KEY}
     namespace: ${REGISTRY_NAMESPACE}
-    image_name: ${CF_APP_NAME}
+    image_name: ${APP_NAME}
     script: |-
       #!/bin/bash
       ./scripts/pipeline-BUILD-DOCKER.sh
