--- a/.gitignore
+++ b/.gitignore
@@ -4,24 +4,24 @@ temp
 node_modules
 
 # Terraform
-.cloud/terraform/provider.tf
-.cloud/terraform/.terraform
-.cloud/terraform/terraform.tfstate*
-.cloud/terraform/ibm-databases/terraform.tfstate
-.cloud/terraform/ibm-databases/terraform.tfstate.backup
-
+**/*.tfstate
+**/*.tf
+**/*.tfvars
+**/*.backup
 
 # Cloud Foundry
 vcap-local.json
 
 # Local Values
-.cloud/certificate
-.cloud/chart/mytodos/local-values.yaml
+**/*.pem
+**/.terraform/*
+cloud/certificate
+cloud/chart/mytodos/local-values.yaml
 credentials.env
-.cloud/kubernetes/imagePullSecret.json
-.cloud/kubernetes/ingress-tls-rewrite.yaml
-.cloud/kubernetes/mytodo.yaml
-.cloud/kubernetes/mytodo-community.yaml
+cloud/kubernetes/imagePullSecret.json
+cloud/kubernetes/ingress-tls-rewrite.yaml
+cloud/kubernetes/mytodo.yaml
+cloud/kubernetes/mytodo-community.yaml
 
 # Miscellaneous
 myreadme.txt
