--- a/cloud/kubernetes/hpa-create.yaml
+++ b/cloud/kubernetes/hpa-create.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: mytodos-scaler
+  name: mytodo-scaler
 spec:
   scaleTargetRef:
     # HPA needs to use the same apiVersion than the target resource
     # otherwide kubectl describe hpa returns: no matches for kind "Deployment"
     apiVersion: extensions/v1beta1
     kind: Deployment
-    name: mytodos
+    name: mytodo
   minReplicas: 2
   maxReplicas: 10
   metrics:
