--- a/cloud/kubernetes/ingress-notls-deploy.yaml
+++ b/cloud/kubernetes/ingress-notls-deploy.yaml
@@ -3,18 +3,18 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: mytodos
+  name: mytodo
 spec:
   replicas: 2 # tells deployment to run 2 pods matching the template
   template:   # create pods using pod definition in this template
     metadata:
       labels:
-        app: mytodos
+        app: mytodo
         tier: frontend
     spec:
       containers:
-      - name: mytodos
-        image: <region>.icr.io/<namespace>/todo-<lastname>:1.0
+      - name: mytodo
+        image: <region>.icr.io/<namespace>/mytodo-<lastname>:1.0
         imagePullPolicy: Always
         resources:
           requests:
@@ -30,12 +30,12 @@ spec:
         - name: service-bind-volume
           secret:
             defaultMode: 420
-            secretName: binding-todo-cloudant
+            secretName: binding-mytodo-cloudant
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: mytodos-ingress
+  name: mytodo-ingress
 spec:
   rules:
   - host: todo.<cluster-name>.<region>.containers.appdomain.cloud
@@ -43,28 +43,28 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: mytodos
+          serviceName: mytodo
           servicePort: 8080
   # - host: www.mycustomdomain.com
   #   http:
   #     paths:
   #     - path: /
   #       backend:
-  #         serviceName: mytodos
+  #         serviceName: mytodo
   #         servicePort: 3000
 ---
 # Service to expose frontend
 apiVersion: v1
 kind: Service
 metadata:
-  name: mytodos
+  name: mytodo
   labels:
-    app: mytodos
+    app: mytodo
     tier: frontend
 spec:
   ports:
   - protocol: TCP
     port: 8080
   selector:
-    app: mytodos
+    app: mytodo
     tier: frontend
