--- a/cloud/kubernetes/ingress-tls-deploy.yaml
+++ b/cloud/kubernetes/ingress-tls-deploy.yaml
@@ -1,9 +1,17 @@
 ---
+# Create a Kubernetes namespace
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: mytodo
+
+---
 # Application to deploy
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mytodo
+  namespace: mytodo
 spec:
   replicas: 2 # tells deployment to run 2 pods
   selector:
@@ -35,16 +43,17 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: mytodo-ingress
+  namespace: mytodo
   annotations:
     # Force the use of https if the request is http
     ingress.bluemix.net/redirect-to-https: "True"
 spec:
   tls:
   - hosts:
-    - todo.<cluster-name>.<cloud-region>.containers.appdomain.cloud
+    - mytodo.<cluster-name>.<cloud-region>.containers.appdomain.cloud
     secretName: <cluster-name>
   rules:
-  - host: todo.<cluster-name>.<cloud-region>.containers.appdomain.cloud
+  - host: mytodo.<cluster-name>.<cloud-region>.containers.appdomain.cloud
     http:
       paths:
       - path: /
@@ -57,6 +66,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mytodo
+  namespace: mytodo
   labels:
     app: mytodo
     tier: frontend
