fix helm chart root

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,7 +3,7 @@ credentials.env
 npm-debug.log
 vcap-local.json
 
-.cloud/certificate
-.cloud/chart/mytodo/local-values.yaml
-.cloud/kubernetes/imagePullSecret.json
-.cloud/kubernetes/ingress-tls-mydeploy.yaml
+cloud/certificate
+cloud/chart/mytodo/local-values.yaml
+cloud/kubernetes/imagePullSecret.json
+cloud/kubernetes/ingress-tls-mydeploy.yaml
