--- a/cloud/kubernetes/ingress-notls-deploy.yaml
+++ b/cloud/kubernetes/ingress-notls-deploy.yaml
@@ -36,6 +36,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: mytodo-ingress
+  annotations:
+    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
 spec:
   rules:
   - host: todo.<cluster-name>.<region>.containers.appdomain.cloud
