--- a/cloud/kubernetes/ingress-tls-deploy.yaml
+++ b/cloud/kubernetes/ingress-tls-deploy.yaml
@@ -45,8 +45,7 @@ metadata:
   name: mytodo-ingress
   namespace: mytodo
   annotations:
-    # Force the use of https if the request is http
-    ingress.bluemix.net/redirect-to-https: "True"
+    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
 spec:
   tls:
   - hosts:
