--- a/cloud/kubernetes/ingress-notls-deploy.yaml
+++ b/cloud/kubernetes/ingress-notls-deploy.yaml
@@ -40,7 +40,7 @@ metadata:
     kubernetes.io/ingress.class: "public-iks-k8s-nginx"
 spec:
   rules:
-  - host: todo.<cluster-name>.<region>.containers.appdomain.cloud
+  - host: todo.<ingress-subdomain>
     http:
       paths:
       - path: /
