--- a/cloud/chart/mytodo/values.yaml
+++ b/cloud/chart/mytodo/values.yaml
@@ -22,11 +22,7 @@ service:
 ingress:
   enabled: true
   annotations:
-    # Force the use of https if the request is http
-    ingress.bluemix.net/redirect-to-https: "True"
-    # Activate App ID for Authentication
-    # Requires the existence of an App Id service bound to the cluster
-    # ingress.bluemix.net/appid-auth: "bindSecret=binding-app-id-20180705 namespace=default requestType=web serviceName=mytodo"
+    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
   path: /
   hosts:
     - todo.<cluster-name>.eu-de.containers.appdomain.cloud
