--- a/cloud/kubernetes/ingress-tls-deploy.yaml
+++ b/cloud/kubernetes/ingress-tls-deploy.yaml
@@ -37,6 +37,7 @@ metadata:
   name: mytodo-ingress
   annotations:
     kubernetes.io/ingress.class: "public-iks-k8s-nginx"
+    #kubernetes.io/ingress.class: "private-iks-k8s-nginx"
 spec:
   tls:
   - hosts:
