ingress api version

--- a/cloud/chart/mytodo/templates/ingress.yaml
+++ b/cloud/chart/mytodo/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "mytodo.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -31,8 +31,11 @@ spec:
       http:
         paths:
           - path: {{ $ingressPath }}
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: 8080
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: 8080
   {{- end }}
 {{- end }}
