--- a/cloud/kubernetes/ingress-tls-deploy.yaml
+++ b/cloud/kubernetes/ingress-tls-deploy.yaml
@@ -31,7 +31,7 @@ spec:
         #     name: database-credentials
         #     optional: true
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mytodo-ingress
@@ -48,9 +48,13 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: mytodo
-          servicePort: 8080
+          service:
+            name: mytodo
+            port:
+              number: 8080
+
 ---
 # Service to expose frontend
 apiVersion: v1
