--- a/cloud/istio/istio-deploy.yaml
+++ b/cloud/istio/istio-deploy.yaml
@@ -59,7 +59,7 @@ spec:
     tier: frontend
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gateway
@@ -70,6 +70,9 @@ spec:
   - http:
       paths:
       - path: /.*
+        pathType: Prefix
         backend:
-          serviceName: mytodo
-          servicePort: 8080
+          service:
+            name: mytodo
+            port:
+              number: 8080
