--- a/cloud/kubernetes/mytodo-openshift.yaml
+++ b/cloud/kubernetes/mytodo-openshift.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: mytodo
         # image: lionelmace/mytodo:lts-alpine3.12
-        image: de.icr.io/mace/mytodo:lts-alpine3.12
+        image: de.icr.io/mace/mytodo:lts-alpine3.14
         imagePullPolicy: Always
         resources:
           requests:
@@ -61,4 +61,27 @@ spec:
     app: mytodo
     tier: frontend
     # deploymentconfig: nodejs-sample
-  type: LoadBalancer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: mytodo-ingress
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
+spec:
+  tls:
+  - hosts:
+    - iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
+    secretName: iro-483cccd2f0d38128dd40d2b711142ba9-0000
+  rules:
+  - host: iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: mytodo
+            port:
+              number: 8080
