--- a/cloud/kubernetes/mytodo-openshift.yaml
+++ b/cloud/kubernetes/mytodo-openshift.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
       - name: mytodo
-        # image: lionelmace/mytodo:lts-alpine3.12
-        image: de.icr.io/mace/mytodo:lts-alpine3.14
+        # Example: de.icr.io/mynamespace/mytodo:1.0
+        image: <registry-region>.icr.io/<namespace>/<docker-img-name>:<docker-img-tag>
         imagePullPolicy: Always
         resources:
           requests:
@@ -62,6 +62,7 @@ spec:
     tier: frontend
     # deploymentconfig: nodejs-sample
 ---
+# Command line: oc create route edge --service=mytodo-service
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
@@ -72,7 +73,7 @@ metadata:
     tier: frontend
 spec:
   host: >-
-    mytodo-service-default.iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
+    <ingress-subdomain>
   to:
     kind: Service
     name: mytodo-service
@@ -82,28 +83,3 @@ spec:
   tls:
     termination: edge
   wildcardPolicy: None
-
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: mytodo-ingress
-#   namespace: default
-#   annotations:
-#     kubernetes.io/ingress.class: "public-iks-k8s-nginx"
-# spec:
-#   tls:
-#   - hosts:
-#     - iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
-#     secretName: iro-483cccd2f0d38128dd40d2b711142ba9-0000
-#   rules:
-#   - host: iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
-#     http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: mytodo
-#             port:
-#               number: 8080
