--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ temp
 node_modules
 
 # Terraform
+**/*.terraform.lock.hcl
 **/*.tfstate
 **/*.tfvars
 **/*.backup
@@ -21,8 +22,11 @@ credentials.env
 cloud/kubernetes/imagePullSecret.json
 cloud/kubernetes/ingress-tls-rewrite.yaml
 cloud/kubernetes/mytodo.yaml
+cloud/kubernetes/mytodo-ocp.yaml
 cloud/kubernetes/mytodo-ns.yaml
 
 # Miscellaneous
 myreadme.txt
 .editorconfig
+
+cloud/terraform_old
