--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-temp
-
 # Node.js
 node_modules
 
-# Terraform
-**/*.terraform.lock.hcl
-**/*.tfstate
-**/*.tfvars
+# # Terraform
+# .terraform.*
+# .terraform/
+# **/*.terraform.*.*
+# **/*.tfstate
+# **/*.tfvars
 **/*.backup
-cloud/terraform/09-import
 
 # Cloud Foundry
 vcap-local.json
@@ -29,3 +28,16 @@ cloud/terraform-old
 # Miscellaneous
 myreadme.txt
 .editorconfig
+
+# Local .terraform directories
+**/.terraform/*
+# .tfstate files
+*.tfstate
+*.tfstate.*
+*.terraform.lock.hcl
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+#
+*.tfvars
